--- a/templates/admin/detail.html
+++ b/templates/admin/detail.html
@@ -13,10 +13,16 @@
 {% endblock %}
 
 {% block mainPanelTitle %}
+<div class="container-fuild">
+<div class="row">
+<div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a href="/admin/index">Company</a></li>
-  <li class="active">Overview</li>
+  <li><a href="/admin/company/index">Company</a></li>
+  <li class="active">Details</li>
 </ol>
+</div>
+</div>
+</div>
 {% endblock %}
 {% block main %}
     {{desc}}
