--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -9,7 +9,8 @@
     <!-- common css import -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" >
-    <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}" > 
+    <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}" >
+    <link rel="stylesheet" href="{% static 'css/datatables.css' %}" >
     {% block headerCssBlock %}
 	{% endblock %}
 	<link rel="stylesheet" href="{% static 'css/style.css' %}" >
@@ -43,6 +44,8 @@
     <script src="{% static 'js/jquery-2.1.1.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/csrf.js' %}"></script>
+	<script src="{% static 'js/jquery.dataTables.min.js' %}" type="text/javascript"></script>
+  	<script src="{% static 'js/datatable-editable.js' %}" type="text/javascript"></script>
 	{% block headerJsBlock %}
 	{% endblock %}
 	<script src="{% static 'js/custom.js' %}" type="text/javascript"></script>
