--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -1,25 +1,29 @@
+{% load i18n %}
+{% load url from future %}
 <div class="panel panel-warning">
-  <div class="panel-heading">Panel heading without title</div>
+  <div class="panel-heading">{% trans "Appliance repair" %}</div>
   <div class="panel-body">
     <div class="list-group sidenav">
-	  <a href="#" class="list-group-item active">
-	    Cras justo odio
+	  <a href="#" class="list-group-item">
+	    {% trans "TV repair" %}
 	  </a>
-	  <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-	  <a href="#" class="list-group-item">Morbi leo risus</a>
-	  <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-	  <a href="#" class="list-group-item">Vestibulum at eros</a>
+	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
+	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
+	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
+	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
 	</div>
   </div>
 </div>
 <div class="panel panel-success">
-  <div class="panel-heading">Panel heading without title</div>
+  <div class="panel-heading">
+  {% trans "Company" %}
+  </div>
   <div class="panel-body">
-    <ul class="list-group">
-	  <li class="list-group-item">
-	    <span class="badge">14</span>
-	    Cras justo odio
-	  </li>
-	</ul>
+    <div class="list-group sidenav">
+	  <a href="{% url 'admin:company_index' %}" class="list-group-item active">
+	    {% trans "Overview" %}
+	  </a>
+	  <a href="#" class="list-group-item">{% trans "Contact" %}</a>
+	</div>
   </div>
 </div>
