--- a/templates/admin/edit.html
+++ b/templates/admin/edit.html
@@ -1,15 +1,16 @@
 {% extends 'base/_base.html' %}
 {% load i18n %}
+{% load url from future %}
 {% load static from staticfiles %}
 {% block title %}{% trans "Company-overview" %}{% endblock %}
  
 {% block headerCssBlock %}
-  <link rel="stylesheet" href="{% static 'css/summernote.css' %}" >
+  
 {% endblock %}
 
 
 {% block headerJsBlock %}
-  <script src="{% static 'js/summernote.min.js' %}" type="text/javascript"></script>
+  
 {% endblock %}
 
 {% block mainPanelTitle %}
@@ -31,7 +32,7 @@
 </div>
 {% endblock %}
 {% block main %}
-    <div id="summernote">
+    <div class="summernote">
       {{desc}}
     </div>
 <!--   	{% include 'admin/_edit.html' %} -->
