--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" >
     <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}" >
     <link rel="stylesheet" href="{% static 'css/datatables.css' %}" >
+    <link rel="stylesheet" href="{% static 'css/summernote.css' %}" >
     {% block headerCssBlock %}
 	{% endblock %}
 	<link rel="stylesheet" href="{% static 'css/style.css' %}" >
@@ -40,14 +41,26 @@
 	  	</div>
 	  </div>
 	</div>
-  	   
+	
+  	<div class="modal fade myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog modal-lg">
+	    <div class="modal-content">
+	    </div>
+	  </div>
+	</div>
+	 
     <script src="{% static 'js/jquery-2.1.1.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/csrf.js' %}"></script>
 	<script src="{% static 'js/jquery.dataTables.min.js' %}" type="text/javascript"></script>
   	<script src="{% static 'js/datatable-editable.js' %}" type="text/javascript"></script>
+  	<script src="{% static 'js/bootstrap-fileupload.js' %}" type="text/javascript"></script>
+  	<script src="{% static 'js/jquery.bootstrap.wizard.min.js' %}" type="text/javascript"></script>
+  	<script src="{% static 'js/summernote.min.js' %}" type="text/javascript"></script>
 	{% block headerJsBlock %}
 	{% endblock %}
 	<script src="{% static 'js/custom.js' %}" type="text/javascript"></script>
+	
+	
   </body>
 </html>
