--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -4,7 +4,7 @@
   <div class="panel-heading">{% trans "Appliance repair" %}</div>
   <div class="panel-body">
     <div class="list-group sidenav">
-	  <a href="#" class="list-group-item">
+	  <a href="/admin/appliance/tv/index" class="list-group-item">
 	    {% trans "TV repair" %}
 	  </a>
 	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
@@ -20,10 +20,21 @@
   </div>
   <div class="panel-body">
     <div class="list-group sidenav">
-	  <a href="{% url 'admin:company_index' %}" class="list-group-item active">
+	  <a href="{% url 'admin:company_index' %}" class="list-group-item">
 	    {% trans "Overview" %}
 	  </a>
 	  <a href="#" class="list-group-item">{% trans "Contact" %}</a>
+	</div>
+  </div>
+</div>
+<div class="panel panel-success">
+  <div class="panel-heading">
+  {% trans "Friendly Link" %}
+  </div>
+  <div class="panel-body">
+    <div class="list-group sidenav">
+	  <a href="http://www.baidu.com" class="list-group-item" target="_blank">{% trans "Baidu" %}</a>
+	  <a href="http://www.sina.com.cn" class="list-group-item"  target="_blank">{% trans "Sina" %}</a>
 	</div>
   </div>
 </div>
