--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ html, body {
   padding-top: 0px;
   padding-bottom: 0px;
   height:100%;
-  background: #e8e8e8;
+/*   background: #e8e8e8; */
 }
 
 .sidenav .list-group-item{
@@ -13,11 +13,17 @@ html, body {
 
 .headimg {
 	width:100%;
-	height:100px;
+	height:240px;
+	border-radius: 5px;
 }
 
 .headcol {
-	padding:5px 5px 2px 5px;
+	padding:5px 14px 0px 14px;
+	
+}
+.my-navbar{
+	margin-top: -80px;
+	margin-bottom:0px;
 }
 
 .mainPanel {
@@ -26,6 +32,21 @@ html, body {
 /*----------------------------------------------------------------------------------- */
 /*  Document Setup */
 /*----------------------------------------------------------------------------------- */
+.panel-black {
+	border-color:#222;
+}
+.panel-black >.panel-heading{
+	background-color: #222;
+	color:#fff;
+	font-size:15px;
+	background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #222 100%);
+    background-image:      -o-linear-gradient(top, #3c3c3c 0%, #222 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#222));
+    background-image:         linear-gradient(to bottom, #3c3c3c 0%, #222 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+    background-repeat: repeat-x;
+}
 ::-webkit-scrollbar {
   width: 8px; }
 
