--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -31,7 +31,7 @@
 	  	{% include 'base/_sidebar.html' %}
 	  	</div>
 	  	<div class="col-lg-9">
-	  	  <div class="panel panel-warning mainPanel">
+	  	  <div class="panel panel-black mainPanel">
 	  	    <div class="panel-heading">{% block mainPanelTitle %}{% endblock %}</div>
 	  	    <div class="panel-body">
 	  		{% block main %}
