--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load url from future %}
-<div class="panel panel-warning">
+<div class="panel panel-black">
   <div class="panel-heading">{% trans "Appliance repair" %}</div>
   <div class="panel-body">
     <div class="list-group sidenav">
@@ -14,7 +14,7 @@
 	</div>
   </div>
 </div>
-<div class="panel panel-success">
+<div class="panel panel-black">
   <div class="panel-heading">
   {% trans "Company" %}
   </div>
@@ -27,7 +27,7 @@
 	</div>
   </div>
 </div>
-<div class="panel panel-success">
+<div class="panel panel-black">
   <div class="panel-heading">
   {% trans "Friendly Link" %}
   </div>
