--- a/templates/admin/_userPanel.html
+++ b/templates/admin/_userPanel.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load url from future %}
-<ul class="nav navbar-nav navbar-right">
+<ul class="nav navbar-nav">
   <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{request.user.username}} <b class="caret"></b></a>
         <ul class="dropdown-menu">
