--- a/templates/base/_navbar.html
+++ b/templates/base/_navbar.html
@@ -2,7 +2,10 @@
 {% load static from staticfiles %}
 {% block navbar %}
 <!-- Navigation -->
-	<div class="navbar navbar-inverse container">
+<div class="container">
+<div class="row">
+  <div class="col-lg-10 col-md-10 col-xs-10 col-lg-offset-1 col-md-offset-1 col-xs-offset-1">
+	<div class="navbar  navbar-inverse  my-navbar" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -11,7 +14,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="/">Project name</a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -38,4 +41,7 @@
         </div>
 	</div>
 <!-- End Navigation -->
+  </div>
+</div>
+</div>
 {% endblock %}
