--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,10 @@ html, body {
 .mainPanel {
 	min-height:672px;
 }
+
+.thumbnail_img {
+	height:190px !important;
+}
 /*----------------------------------------------------------------------------------- */
 /*  Document Setup */
 /*----------------------------------------------------------------------------------- */
