--- a/templates/admin/appliance/create.html
+++ b/templates/admin/appliance/create.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 {% load url from future %}
-<form id="appliance" role="form" action="/admin/appliance/tv/create" method="POST">{% csrf_token %}
+<form id="appliance" data-type="{{type}}" role="form" action="/admin/appliance/{{type}}/create" method="POST">{% csrf_token %}
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-  <h4 class="modal-title" id="myModalLabel">{% trans 'Create TV repair'%}</h4>
+  <h4 class="modal-title" id="myModalLabel">{% trans 'Create repair'%} -- {{type}}</h4>
 </div>
 <div class="modal-body">
   <div id="rootwizard">
@@ -42,7 +42,11 @@
 	                </div>
 	                <div class="fileupload-preview fileupload-exists img-thumbnail" style="width: 200px; max-height: 150px"></div>
 	                <div>
-	                  <span class="btn btn-default btn-file"><span class="fileupload-new">Select image</span><span class="fileupload-exists">Change</span><input type="file"></span>
+	                  <span class="btn btn-default btn-file">
+	                    <span class="fileupload-new">Select image</span>
+	                    <span class="fileupload-exists">Change</span>
+	                    <input type="file" name="thumbnail" id="thumbnail">
+	                  </span>
 	                  <a class="btn btn-default fileupload-exists" data-dismiss="fileupload" href="#">Remove</a>
 	                </div>
 	              </div>
@@ -64,7 +68,7 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" data-dismiss="modal">{% trans 'Cancel'%}</button>
-  <button type="submit" class="btn btn-primary">{% trans 'Save'%}</button>
+  <button type="button" class="btn btn-primary btn-save">{% trans 'Save'%}</button>
 </div>
 </form>
 
@@ -102,6 +106,36 @@ $(function(){
 	        focus: true,
 	        toolbar: [['style', ['style']], ['style', ['bold', 'italic', 'underline', 'clear']], ['fontsize', ['fontsize']], ['color', ['color']], ['para', ['ul', 'ol', 'paragraph']], ['height', ['height']], ['insert', ['picture', 'link']], ['table', ['table']], ['fullscreen', ['fullscreen']]]
 	      });
-	}
+	};
+	//save text
+	$('#appliance').find('.btn-save').click(function(){
+		var type = $('#appliance').attr("data-type");
+		var title = $("#input_title").val();
+		var thumbnail = $('#thumbnail')[0].files[0];
+		var content = $(".note-editable").html();
+		var formData = new FormData();
+		formData.append("title", title);
+		formData.append("thumbnail",thumbnail);
+		formData.append("content",content);
+ 		$.ajax({
+ 				type: "POST",
+ 				url:"/admin/appliance/"+type+"/create",
+ 				//Options to tell jQuery not to process data or worry about content-type.
+ 		        cache: false,
+ 		        contentType: false,
+ 		        processData: false,
+				data: formData,     
+				success:function (data, textStatus){
+					var ret = data.status;
+					if (ret){
+						location.href = "/admin/appliance/"+type+"/index";
+					}else {
+						alert("error");
+					}
+						
+				},
+ 				dataType:"json"
+ 		});
+	});
 });
 </script>
