--- a/templates/admin/edit.html
+++ b/templates/admin/edit.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block mainPanelTitle %}
-<div class="container-fuild">
+<div class="container-fuild" id="company">
 	<div class="row">
 	<div class="col-lg-10">
 	<ol class="breadcrumb breadcrumb_reset">
