--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -7,10 +7,10 @@
 	  <a href="/admin/appliance/tv/index" class="list-group-item">
 	    {% trans "TV repair" %}
 	  </a>
-	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
-	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
-	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
-	  <a href="#" class="list-group-item">{% trans "Appliance repair" %}</a>
+	  <a href="#" class="list-group-item disabled">{% trans "Appliance repair" %}</a>
+	  <a href="#" class="list-group-item disabled">{% trans "Appliance repair" %}</a>
+	  <a href="#" class="list-group-item disabled">{% trans "Appliance repair" %}</a>
+	  <a href="#" class="list-group-item disabled">{% trans "Appliance repair" %}</a>
 	</div>
   </div>
 </div>
@@ -23,7 +23,7 @@
 	  <a href="{% url 'admin:company_index' %}" class="list-group-item">
 	    {% trans "Overview" %}
 	  </a>
-	  <a href="#" class="list-group-item">{% trans "Contact" %}</a>
+	  <a href="#" class="list-group-item  disabled">{% trans "Contact" %}</a>
 	</div>
   </div>
 </div>
