add many feature

--- a/templates/admin/edit.html
+++ b/templates/admin/edit.html
@@ -24,7 +24,7 @@
 	</div>
 	<div class="col-lg-2">
 	  <div class="btn-group">
-	    <a href="{% url 'admin:company_index' %}" type="button" class="btn btn-default btn-sm btn-cacel">cacel</a>
+	    <a href="{% url 'admin:company_index' %}" type="button" class="btn btn-default btn-sm btn-cacel">cancel</a>
 		<button type="button" id="{{id}}" class="btn btn-primary btn-sm btn-save">save</button>
 	  </div>
 	</div>
