--- a/templates/index.html
+++ b/templates/index.html
@@ -5,21 +5,5 @@
 
 {% block mainPanelTitle %}{% trans "Company" %}{% endblock %}
 {% block main %}
-    <ul class="list-group">
-	  <li class="list-group-item">
-	    Cras justo odio
-	  </li>
-	  <li class="list-group-item">
-	    Cras justo odio
-	  </li>
-	  <li class="list-group-item">
-	    Cras justo odio
-	  </li>
-	  <li class="list-group-item">
-	    Cras justo odio
-	  </li>
-	  <li class="list-group-item">
-	    Cras justo odio
-	  </li>
-	</ul>
+    {{company_desc}}
 {% endblock %}
