--- a/templates/admin/appliance/index.html
+++ b/templates/admin/appliance/index.html
@@ -1,7 +1,7 @@
 {% extends 'base/_base.html' %}
 {% load i18n %}
 {% load static from staticfiles %}
-{% block title %}{% trans "Company-contact" %}{% endblock %}
+{% block title %}{{type}} repair{% endblock %}
  
 {% block headerCssBlock %}
   
@@ -25,6 +25,18 @@
 {% block main %}
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
   <div class="container-fuild" style="margin-bottom:10px">
+  	<div class="row">
+  	  <div class="col-lg-12">
+  		<div class="alert alert-danger confirm-message" role="alert">
+  		  <span>Confirm</span>
+  		  <div class="pull-right">
+		    <button type="button" class="btn btn-danger btn-sm btn-no">no</button>
+			<button type="button" class="btn btn-primary btn-sm btn-yes">yes</button>
+		  </div>
+  		</div>
+  	  </div>
+  	</div>
+  	
 	<div class="row">
 	<div class="col-lg-12">
 	  <div class="btn-group pull-right">
@@ -62,7 +74,7 @@
         <td class="actions">
           <div class="action-buttons">
             {% for row_action in row_actions %}
-            	<a class="table-actions" href="/admin/appliance/{{type}}/{{obj.id}}/{{row_action.name}}"><i class="{{row_action.icon}}"></i></a>
+            	<a class="table-actions row-actions" data-confirm="{{row_action.need_confirm}}" href="/admin/appliance/{{type}}/{{obj.id}}/{{row_action.name}}"><i class="{{row_action.icon}}"></i></a>
             {% endfor%}
           </div>
         </td>
