--- a/templates/admin/appliance/view.html
+++ b/templates/admin/appliance/view.html
@@ -1,7 +1,7 @@
 {% extends 'base/_base.html' %}
 {% load i18n %}
 {% load static from staticfiles %}
-{% block title %}{% trans "Company-contact" %}{% endblock %}
+{% block title %}{{type}} repair{% endblock %}
  
 {% block headerCssBlock %}
   
@@ -16,7 +16,7 @@
 <div class="row">
 <div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a class="active">{{type}} repair</a></li>
+  <li><a href="javascript:history.back()" class="active">{{type}} repair</a></li>
 </ol>
 </div>
 </div>
@@ -27,7 +27,7 @@
 	<div class="row">
 	  {% for obj in objs%}
 	  <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail" data-toggle="tooltip" data-placement="top" title="{{obj.title}}">
+        <a href="/{{role}}appliance/{{type}}/{{obj.id}}/view" class="thumbnail" data-toggle="tooltip" data-placement="top" title="{{obj.title}}">
           <img class="thumbnail_img" src="{{obj.thumbnail}}" alt="...">
         </a>
       </div>
