--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -15,7 +15,7 @@
     {% block headerCssBlock %}
 	{% endblock %}
 	<link rel="stylesheet" href="{% static 'css/style.css' %}" >
-	<title>{% block title %}{% endblock %} - {% trans "home" %}</title>
+	<title>{% block title %}{% endblock %}</title>
   </head>
   
   <body>
