--- a/templates/admin/_login.html
+++ b/templates/admin/_login.html
@@ -2,5 +2,5 @@
 {% block form_id %}login{% endblock %}
 {% block form_action %}{{ form.form_action }}{% endblock %}
 {% block modal-footer %}
-	<button type="submit" class="btn btn-primary form-control">Sign in</button>
+	<button type="submit" class="btn btn-primary-outline btn-block">Sign in</button>
 {% endblock %}
