--- a/templates/admin/appliance/create.html
+++ b/templates/admin/appliance/create.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load url from future %}
-<form id="appliance" data-type="{{type}}" role="form" action="/admin/appliance/{{type}}/create" method="POST">{% csrf_token %}
+<form id="appliance" data-type="{{type_id}}" role="form" action="/admin/appliance/{{type_id}}/create" method="POST">{% csrf_token %}
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
   <h4 class="modal-title" id="myModalLabel">{% trans 'Create repair'%} -- {{type}}</h4>
