--- a/templates/admin/appliance/index.html
+++ b/templates/admin/appliance/index.html
@@ -41,7 +41,7 @@
 	<div class="col-lg-12">
 	  <div class="btn-group pull-right">
 		{% for table_action in table_actions %}
-          <a {% if table_action.modal %}data-toggle="modal" data-target=".myModal" {%endif%} href="/admin/appliance/{{type}}/{{table_action.name}}" class="btn btn-default"><i class="{{table_action.icon}}"></i>  {{table_action.verbose_name}}</a>
+          <a {% if table_action.modal %}data-toggle="modal" data-target=".myModal" {%endif%} href="/admin/appliance/{{type_id}}/{{table_action.name}}" class="btn btn-default"><i class="{{table_action.icon}}"></i>  {{table_action.verbose_name}}</a>
         {% endfor%}
 	  </div>
 	</div>
@@ -74,7 +74,7 @@
         <td class="actions">
           <div class="action-buttons">
             {% for row_action in row_actions %}
-            	<a class="table-actions row-actions" data-confirm="{{row_action.need_confirm}}" href="/admin/appliance/{{type}}/{{obj.id}}/{{row_action.name}}"><i class="{{row_action.icon}}"></i></a>
+            	<a class="table-actions row-actions" data-confirm="{{row_action.need_confirm}}" href="/admin/appliance/{{type_id}}/{{obj.id}}/{{row_action.name}}"><i class="{{row_action.icon}}"></i></a>
             {% endfor%}
           </div>
         </td>
