--- a/templates/admin/company.html
+++ b/templates/admin/company.html
@@ -1,7 +1,7 @@
 {% extends 'base/_base.html' %}
 {% load i18n %}
 {% load static from staticfiles %}
-{% block title %}{% trans "Company-contact" %}{% endblock %}
+{% block title %}{% trans "Company" %}{% endblock %}
  
 {% block headerCssBlock %}
   
