--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -48,7 +48,9 @@
 	    </div>
 	  </div>
 	</div>
-	 
+	<!-- Scroll to top -->
+	<span class="totop"><a href="#"><i class="icon-chevron-up"></i></a></span> 
+	
     <script src="{% static 'js/jquery-2.1.1.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/csrf.js' %}"></script>
