--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -31,11 +31,35 @@
 	  <a href="/{{role}}company/index" class="list-group-item">
 	    <strong>{% trans "Overview" %}</strong>
 	  </a>
-	  <a class="list-group-item">
-	    <strong>
-	    {% trans "Contact" %}
-	    </strong>
-	  </a>
+	  <div class="panel-group" id="accordion">
+		  <div class="panel">
+		    <div class="panel-heading">
+		      <h4 class="panel-title">
+		        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+		          {% trans "Contact" %}
+		        </a>
+		      </h4>
+		    </div>
+		    <div id="collapseOne" class="panel-collapse collapse in">
+		      <div class="panel-body">
+				<div class="list-group">
+				  <a class="list-group-item">
+				    <h5 class="list-group-item-heading">{% trans "Contact people" %}</h4>
+				    <p class="list-group-item-text">{{company_info.contact_people}}</p>
+				  </a>
+				  <a class="list-group-item">
+				    <h5 class="list-group-item-heading">{% trans "Telphone" %}</h4>
+				    <p class="list-group-item-text">{{company_info.telphone}}</p>
+				  </a>
+				  <a class="list-group-item">
+				    <h5 class="list-group-item-heading">{% trans "Address" %}</h4>
+				    <p class="list-group-item-text">{{company_info.address}}</p>
+				  </a>
+				</div>
+		      </div>
+		    </div>
+		  </div>
+	  </div>
 	</div>
   </div>
 </div>
