--- a/templates/base/_navbar.html
+++ b/templates/base/_navbar.html
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#"><strong>Home</strong></a></li>
               <li><a href="#about"><strong>About</strong></a></li>
-              <li><a href="#contact"><strong>Contact</strong></a></li>
+              <li><a href="/{{role}}company/contact"><strong>Contact</strong></a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Appliance</strong> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
