add update appliance

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ html, body {
   padding-top: 0px;
   padding-bottom: 0px;
   height:100%;
-/*   background: #e8e8e8; */
+  /*background: none repeat scroll 0% 0% rgb(69, 85, 96);*/
   background: url("../images/background/bg1.gif") repeat 0 0;
 }
 
