--- a/templates/admin/appliance/view.html
+++ b/templates/admin/appliance/view.html
@@ -27,7 +27,7 @@
 	<div class="row">
 	  {% for obj in objs%}
 	  <div class="col-xs-6 col-md-3">
-        <a href="/{{role}}appliance/{{type}}/{{obj.id}}/view" class="thumbnail" data-toggle="tooltip" data-placement="top" title="{{obj.title}}">
+        <a href="/{{role}}appliance/{{type_id}}/{{obj.id}}/view" class="thumbnail" data-toggle="tooltip" data-placement="top" title="{{obj.title}}">
           <img class="thumbnail_img" src="{{obj.thumbnail}}" alt="...">
         </a>
       </div>
