--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -9,11 +9,25 @@
 <!-- 	  <a href="#" class="list-group-item">{% trans "Fridge repair" %}</a> -->
 <!-- 	  <a href="#" class="list-group-item">{% trans "Microwave Oven repair" %}</a> -->
 <!-- 	  <a href="#" class="list-group-item">{% trans "Heater repair" %}</a> -->
+
+        <div class="row">
+	  	  <div class="col-lg-12">
+	  		<div class="alert alert-danger confirm-type-message" role="alert">
+	  		  <span>Confirm</span>
+	  		  <div class="pull-right">
+			    <button type="button" class="btn btn-danger btn-sm btn-no">no</button>
+				<button type="button" class="btn btn-primary btn-sm btn-yes">yes</button>
+			  </div>
+	  		</div>
+	  	  </div>
+	  	</div>
+	  
 	  {%for appliance in appliance_list%}
-	    <a href="/{{role}}appliance/{{appliance.id}}/index" class="list-group-item list-appliance-item">
+	    <a data-ref="{{appliance.id}}" href="/{{role}}appliance/{{appliance.id}}/index" class="list-group-item list-appliance-item">
 	      <strong>{{appliance.type}}</strong>
+	      {%if role == "admin/"%}
 	      <i class="icon-trash pull-right"></i>
-	      <i class="icon-pencil pull-right"></i>
+	      {%endif%}
 	    </a>
 	  {%endfor%}
 	  {% if role %}
