--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -50,6 +50,13 @@
 	</div>
 	<!-- Scroll to top -->
 	<span class="totop"><a href="#"><i class="icon-chevron-up"></i></a></span> 
+	<div id="footer">
+      <div class="container">
+        <h4>{%trans "Technology Support By Yuxiaoyang"%}</h4>
+        <h4>QQ :641991945, Email:newton1919@sina.com</h4>
+      </div>
+    </div>
+	
 	
     <script src="{% static 'js/jquery-2.1.1.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
