--- a/templates/base/_navbar.html
+++ b/templates/base/_navbar.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load url from future %}
 {% load static from staticfiles %}
 {% block navbar %}
@@ -14,15 +15,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><strong>Project name</strong></a>
+            <a class="navbar-brand" href="/"><i class="icon-windows"></i> <strong>{%trans "iRepair" %}</strong></a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#"><strong>Home</strong></a></li>
-              <li><a href="#about"><strong>About</strong></a></li>
-              <li><a href="/{{role}}company/contact"><strong>Contact</strong></a></li>
+              <li><a href="/{{role}}"><i class="icon-home"></i> <strong>Home</strong></a></li>
+              <li><a href="#about"><i class="icon-info"></i> <strong>About</strong></a></li>
+              <li><a href="/{{role}}company/contact"><i class="icon-comments"></i> <strong>Contact</strong></a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong>Appliance</strong> <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-laptop"></i> <strong>Appliance</strong> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   {%for appliance in appliance_list%}
                   <li><a href="/{{role}}appliance/{{appliance.id}}/index"><strong>{{appliance.type}}</strong></a></li>
