--- a/templates/base/_navbar.html
+++ b/templates/base/_navbar.html
@@ -20,7 +20,6 @@
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href="/{{role}}"><i class="icon-home"></i> <strong>Home</strong></a></li>
-              <li><a href="#about"><i class="icon-info"></i> <strong>About</strong></a></li>
               <li><a href="/{{role}}company/contact"><i class="icon-comments"></i> <strong>Contact</strong></a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-laptop"></i> <strong>Appliance</strong> <b class="caret"></b></a>
@@ -31,6 +30,7 @@
                   {%endfor%}
                 </ul>
               </li>
+              <li><a href=""><i class="icon-globe"></i> <strong>语言(Language)</strong></a></li>
             </ul>
             {% if request.user.is_superuser %}
             {% include 'admin/_userPanel.html' %}
