--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -53,7 +53,7 @@
 	<div id="footer">
       <div class="container">
         <h4>{%trans "Technology Support By Yuxiaoyang"%}</h4>
-        <h4>QQ :641991945, Email:newton1919@sina.com</h4>
+        <h4>QQ :641991945, {%trans 'Email'%}:newton1919@sina.com</h4>
       </div>
     </div>
 	
