--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
 <div class="panel panel-black">
-  <div class="panel-heading"><strong>{% trans "Appliance repair" %}</strong></div>
+  <div class="panel-heading"><strong>{% trans "Appliance"%} {% trans "repair" %}</strong></div>
   <div class="panel-body">
     <div class="list-group sidenav">
 	  
@@ -13,10 +13,10 @@
         <div class="row">
 	  	  <div class="col-lg-12">
 	  		<div class="alert alert-danger confirm-type-message" role="alert">
-	  		  <span>Confirm</span>
+	  		  <span>{% trans "Confirm" %}</span>
 	  		  <div class="pull-right">
-			    <button type="button" class="btn btn-danger btn-sm btn-no">no</button>
-				<button type="button" class="btn btn-primary btn-sm btn-yes">yes</button>
+			    <button type="button" class="btn btn-danger btn-sm btn-no">{% trans "no" %}</button>
+				<button type="button" class="btn btn-primary btn-sm btn-yes">{% trans "yes" %}</button>
 			  </div>
 	  		</div>
 	  	  </div>
@@ -31,7 +31,7 @@
 	    </a>
 	  {%endfor%}
 	  {% if role %}
-	    <a data-toggle="modal" data-target=".myModal" href="/admin/appliance_type/create" class="btn btn-default btn-block"><i class="icon-plus"></i> add appliance type</a>
+	    <a data-toggle="modal" data-target=".myModal" href="/admin/appliance_type/create" class="btn btn-default btn-block"><i class="icon-plus"></i> {% trans "add appliance type" %}</a>
 	  {%endif%}
 	</div>
   </div>
