--- a/templates/admin/appliance/type_create.html
+++ b/templates/admin/appliance/type_create.html
@@ -1,12 +1,13 @@
 {% extends "base/_form.html" %}
+{% load i18n %}
 {% block form_id %}appliance_type{% endblock %}
 {% block form_action %}/admin/appliance_type/create{% endblock %}
 {% block modal-header %}
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-  <h4 class="modal-title strong" id="myModalLabel">Create appliance type</h4>
+  <h4 class="modal-title strong" id="myModalLabel">{% trans "Create appliance type" %}</h4>
 </div>
 {% endblock %}
 {% block modal-footer %}
-	<button type="submit" class="btn btn-primary form-control">Ok</button>
+	<button type="submit" class="btn btn-primary form-control">{% trans "Ok" %}</button>
 {% endblock %}
