--- a/templates/admin/_userPanel.html
+++ b/templates/admin/_userPanel.html
@@ -4,9 +4,9 @@
   <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{request.user.username}} <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Settings</a></li>
+          <li><a href="#">{% trans "Settings" %}</a></li>
           <li class="divider"></li>
-          <li><a href="{% url 'admin:logout' %}">Logout</a></li>
+          <li><a href="{% url 'admin:logout' %}">{% trans "Logout" %}</a></li>
         </ul>
   </li>
 </ul>
