--- a/templates/admin/company.html
+++ b/templates/admin/company.html
@@ -16,7 +16,7 @@
 <div class="row">
 <div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a class="active">Company</a></li>
+  <li><a class="active">{% trans "Company" %}</a></li>
 </ol>
 </div>
 </div>
@@ -31,7 +31,7 @@
       {% for col in columns %}
       <th>{{col.verbose_name}}</th>
       {% endfor%}
-      <th>Actions</th>
+      <th>{% trans "Actions" %}</th>
     </thead>
     <tbody>
       {% for obj in objs %}
