--- a/templates/admin/edit.html
+++ b/templates/admin/edit.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load url from future %}
 {% load static from staticfiles %}
-{% block title %}{% trans "Company-overview" %}{% endblock %}
+{% block title %}{% trans "Update" %}{% endblock %}
  
 {% block headerCssBlock %}
   
@@ -18,14 +18,14 @@
 	<div class="row">
 	<div class="col-lg-9">
 	<ol class="breadcrumb breadcrumb_reset">
-	  <li><a href="/admin/company/index">Company</a></li>
-	  <li class="active">Update</li>
+	  <li><a href="/admin/company/index">{% trans "Company" %}</a></li>
+	  <li class="active">{% trans "Update" %}</li>
 	</ol>
 	</div>
 	<div class="col-lg-3">
 	  <div class="btn-group">
-	    <a href="{% url 'admin:company_index' %}" type="button" class="btn btn-default btn-sm btn-cancel">cancel</a>
-		<button type="button" id="{{id}}" class="btn btn-primary btn-sm btn-save">save</button>
+	    <a href="{% url 'admin:company_index' %}" type="button" class="btn btn-default btn-sm btn-cancel">{% trans "cancel" %}</a>
+		<button type="button" id="{{id}}" class="btn btn-primary btn-sm btn-save">{% trans "save" %}</button>
 	  </div>
 	</div>
 	</div>
@@ -34,31 +34,31 @@
 {% block main %}
     <form role="form" id="company_edit">
 	  <div class="form-group">
-	    <label for="company_name">Company name</label>
+	    <label for="company_name">{% trans "Name" %}</label>
 	    <input type="text" class="form-control" id="company_name" value="{{company_name}}" placeholder="Company name">
 	  </div>
 	  <div class="form-group">
-	    <label for="country">Country</label>
+	    <label for="country">{% trans "Country" %}</label>
 	    <input type="text" class="form-control" id="country" value="{{country}}" placeholder="">
 	  </div>
 	  <div class="form-group">
-	    <label for="city">City</label>
+	    <label for="city">{% trans "City" %}</label>
 	    <input type="text" class="form-control" id="city" value="{{city}}" placeholder="">
 	  </div>
 	  <div class="form-group">
-	    <label for="address">Address</label>
+	    <label for="address">{% trans "Address" %}</label>
 	    <input type="text" class="form-control" id="address" value="{{address}}" placeholder="">
 	  </div>
 	  <div class="form-group">
-	    <label for="website">Website</label>
+	    <label for="website">{% trans "Website" %}</label>
 	    <input type="text" class="form-control" id="website" value="{{website}}" placeholder="">
 	  </div>
 	  <div class="form-group">
-	    <label for="contact_people">Contact people</label>
+	    <label for="contact_people">{% trans "Contact people" %}</label>
 	    <input type="text" class="form-control" id="contact_people" value="{{contact_people}}" placeholder="">
 	  </div>
 	  <div class="form-group">
-	    <label for="telphone">Telphone</label>
+	    <label for="telphone">{% trans "Telphone" %}</label>
 	    <input type="text" class="form-control" id="telphone" value="{{telphone}}" placeholder="">
 	  </div>
 	  <div class="summernote">
